--- a/PAYMENT-GATEWAY-INTEGRATION/contact.html
+++ b/PAYMENT-GATEWAY-INTEGRATION/contact.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
     
-                    <form class='contact100-form validate-form' method='refresh'><input type='hidden' name='form-name' value='form 1' />
+                    <form class='contact100-form validate-form'><input type='hidden' name='form-name' value='form 1' />
                         <span class="contact100-form-title">
                             Get in touch...
                         </span>
